      the fixed list of versioned files per repository. (Robert Collins)

    * ``VersionedFile.clone_text`` is deprecated. This performance optimisation
      is no longer used - reading the content of a file that is undergoing a
      file level merge to identical state on two branches is rare enough, and
      not expensive enough to special case. (Robert Collins)

    * ``VersionedFile.create_empty`` is removed. This method presupposed a
      sensible mapping to a transport for individual files, but pack backed
      versioned files have no such mapping. (Robert Collins)

    * ``VersionedFile.get_graph`` is deprecated, with no replacement method.
      The method was size(history) and not desirable. (Robert Collins)

    * ``VersionedFile.get_graph_with_ghosts`` is deprecated, with no
      replacement method.  The method was size(history) and not desirable.
      (Robert Collins)

    * ``VersionedFile.get_parents`` is deprecated, please use
      ``VersionedFile.get_parent_map``. (Robert Collins)

    * ``VersionedFile.get_sha1`` is deprecated, please use
      ``VersionedFile.get_sha1s``. (Robert Collins)

    * ``VersionedFile.has_ghost`` is now deprecated, as it is both expensive
      and unused outside of a single test. (Robert Collins)

    * ``VersionedFile.iter_parents`` is now deprecated in favour of
      ``get_parent_map`` which can be used to instantiate a Graph on a
      VersionedFile. (Robert Collins)

    * ``VersionedFileStore`` no longer uses the transaction parameter given
      to most methods; amongst other things this means that the
      get_weave_or_empty method no longer guarantees errors on a missing weave
      in a readonly transaction, and no longer caches versioned file instances
      which reduces memory pressure (but requires more careful management by
      callers to preserve performance.  (Robert Collins)

  TESTING:

    * New -Dselftest_debug flag disables clearing of the debug flags during